err/pyptlib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyptlib'...
Compiling './lib/python3.5/site-packages/pyptlib/client_config.py'...
***   File "./lib/python3.5/site-packages/pyptlib/client_config.py", line 70
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyptlib/config.py'...
***   File "./lib/python3.5/site-packages/pyptlib/config.py", line 86
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyptlib/core.py'...
***   File "./lib/python3.5/site-packages/pyptlib/core.py", line 59
    except ProxyError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyptlib/util'...
Compiling './lib/python3.5/site-packages/pyptlib/util/__init__.py'...
***   File "./lib/python3.5/site-packages/pyptlib/util/__init__.py", line 56
    m = re.match(ur'^\[(.+)\]:(\d*)$', spec)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyptlib/util/subproc.py'...
***   File "./lib/python3.5/site-packages/pyptlib/util/subproc.py", line 182
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyptlib-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
